# ipm

./: .flake8  .gitignore  Makefile  README.md  Verified_IPs.json  default.nix  flake.nix  pyproject.toml  requirements.txt  setup.py  verified_IPs.json
.github/workflows/: publish-to-pypi.yml  test_ips.yml
docs/: commands.md  ip_package.md  packaging.md
ipm/: __init__.py  __main__.py  __version__.py  common.py  manage.py  version_check.py
