[project]
name = "efipm"
version = "1.0.0"
authors = [
  { name="Efabless Corporation", email="contact@efabless.com" },
]
description = "Open-source IPs Package Manager."
readme = "README.md"
requires-python = ">3.6"
classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

[project.urls]
Homepage = "https://github.com/efabless/IPM"
Issues = "https://github.com/efabless/IPM/issues"