[tool.poetry]
name = "ipmgr"
version = "1.2.0"
description = "Package manager for Open Source ASIC IPs"
authors = ["Efabless Corporation <marwan.abbas@efabless.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://efabless.com"
repository = "https://github.com/efabless/ipm"
packages = [{ include = "ipm" }]

[tool.poetry.dependencies]
python = ">=3.8.0"
click = ">=8.0.0,<9"
rich = ">=12,<14"
httpx = ">0.22.0,<0.26.0"
click-default-group = "*"
requests = ">=2.31.0,<3"
beautifulsoup4 = ">=4.12.0,<5"
pyyaml = ">=5,<7"

[tool.poetry.dev-dependencies]
wheel = "*"
black = ">=24.4.0,<25"
flake8 = ">=4"


[tool.poetry.scripts]
ipm = "ipm.__main__:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
